# otus7

./: CMakeLists.txt  bulk.cpp  bulk_class.cpp  bulk_class.h  observer.h
